--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,5 +1,5 @@
 
-<!-- <form method="POST" action="/recipes/<%=@recipe.id%>">
+<form method="POST" action="/recipes/<%=@recipe.id%>">
   <input id="hidden" type="hidden" name="_method" value="patch" />
 
   <label for="name">Name</label>
@@ -12,4 +12,4 @@
   <input type="text" id="cook_time" name="cook_time" value="<%=@recipe.cook_time%>" />
 
   <input type="submit" value="submit" />
-</form> -->
+</form>
